Javadocs and code refactor (#30)
* Updated Javadocs for all the relevan classes/code