@@ -5,6 +5,7 @@ import android.support.annotation.Nullable;
 import android.text.format.DateFormat;
 
 import com.annimon.stream.Collectors;
+import com.annimon.stream.Exceptional;
 import com.annimon.stream.Objects;
 import com.annimon.stream.Stream;
 import com.xmartlabs.template.BaseProjectApplication;
@@ -29,8 +30,8 @@ import java.util.Locale;
 import java.util.TimeZone;
 
 /**
- * Created by santiago on 18/09/15.
  * A helper class to conveniently parse date information.
+ *
  * Based on the version of Ralf Gehrer <ralf@ecotastic.de>.
  * This class contains date parsing for human and machine readable dates.
  */
@@ -61,7 +62,7 @@ public class DateHelper {
   /**
    * Gets the android device time format.
    *
-   * @return DateTimeFormatter formatted on the right way.
+   * @return {@link DateTimeFormatter} formatted the right way.
    */
   public static DateTimeFormatter getDeviceTimeFormat() {
     SimpleDateFormat timeFormat = (SimpleDateFormat) DateFormat.getTimeFormat(BaseProjectApplication.getContext());
@@ -71,7 +72,7 @@ public class DateHelper {
   /**
    * Gets the android device medium date format.
    *
-   * @return DateTimeFormatter formatted on the right way.
+   * @return {@link DateTimeFormatter} formatted the right way.
    */
   public static DateTimeFormatter getDeviceMediumDateFormat() {
     SimpleDateFormat timeFormat = (SimpleDateFormat) DateFormat.getMediumDateFormat(BaseProjectApplication.getContext());
@@ -81,7 +82,7 @@ public class DateHelper {
   /**
    * Gets the android device long date format.
    *
-   * @return DateTimeFormatter formatted on the right way.
+   * @return {@link DateTimeFormatter} formatted the right way.
    */
   public static DateTimeFormatter getDeviceLongDateFormat() {
     SimpleDateFormat timeFormat = (SimpleDateFormat) DateFormat.getLongDateFormat(BaseProjectApplication.getContext());
@@ -89,9 +90,9 @@ public class DateHelper {
   }
 
   /**
-   * Converts a TemporalAccessor object to a string representation.
+   * Converts a {@link TemporalAccessor} object to a string representation.
    *
-   * @param temporalAccessor TemporalAccessor object.
+   * @param temporalAccessor {@link TemporalAccessor} object.
    * @param df               Date format.
    * @return Date string formatted on the right way.
    */
@@ -109,18 +110,15 @@ public class DateHelper {
    */
   @Nullable
   public static LocalDateTime stringToLocalDateTime(@NonNull String dateAsString, @NonNull DateTimeFormatter df) {
-    try {
-      return LocalDateTime.parse(dateAsString, df);
-    } catch (Exception e) {
-      return null;
-    }
+    return Exceptional.of(() -> LocalDateTime.parse(dateAsString, df))
+        .get();
   }
 
   /**
-   * Sets the <code>date</code> to the last second of the day it's in.
+   * Sets the {@code date} to the last second of the day it's in.
    *
    * @param date the date to update.
-   * @return a new <code>Date</code>, same day as <code>date</code> but starting at the last second of the day.
+   * @return a new {@link LocalDateTime} object, same day as {@code date} but starting at the last second of the day.
    */
   @NonNull
   public static LocalDateTime toLastSecond(@NonNull LocalDateTime date) {
@@ -128,31 +126,31 @@ public class DateHelper {
   }
 
   /**
-   * Checks whether the given <code>date</code> is today or not.
+   * Checks whether the given {@code date} is today or not.
    *
    * @param date  the date to check.
    * @param clock to be used to retrieve today's date.
-   * @return true if the date given by the <code>clock</code> is the same as <code>date</code>.
+   * @return true if the date given by the {@code clock} is the same as {@code date}.
    */
   public static boolean isToday(LocalDate date, Clock clock) {
     return Objects.equals(date, LocalDate.now(clock));
   }
 
   /**
-   * Retrieves the first day of the <code>date</code> week.
+   * Retrieves the first day of the {@code date} week.
    *
    * @param date the date whose week's first day we want to retrieve.
-   * @return a <code>Date</code> instance representing the first day of the <code>date</code> week.
+   * @return a {@link LocalDate} instance representing the first day of the {@code date} week.
    */
   public static LocalDate getFirstDayOfWeek(LocalDate date) {
     return date.with(DayOfWeek.MONDAY);
   }
 
   /**
-   * Retrieves a <code>Calendar</code> instance from the <code>clock</code>.
+   * Retrieves a {@link Calendar} instance from the {@code clock}.
    *
-   * @param clock to be used to retrieve the <code>Calendar</code> instance.
-   * @return a new <code>Calendar</code> instance representing the clock's time.
+   * @param clock to be used to retrieve the {@link Calendar} instance.
+   * @return a new {@link Calendar} instance representing the clock's time.
    */
   @NonNull
   public static Calendar getCalendarFromClock(Clock clock) {
@@ -162,10 +160,10 @@ public class DateHelper {
   }
 
   /**
-   * Retrieves a <code>Date</code> instance from the <code>clock</code>.
+   * Retrieves a {@link Date} instance from the {@code clock}.
    *
-   * @param clock to be used to retrieve the <code>Date</code> instance.
-   * @return a new <code>Date</code> omstamce representing the clock's time.
+   * @param clock to be used to retrieve the {@link Date} instance.
+   * @return a new {@link Date} instance representing the clock's time.
    */
   @NonNull
   public static Date getDateFromClock(Clock clock) {
@@ -173,12 +171,12 @@ public class DateHelper {
   }
 
   /**
-   * Checks whether or not the <code>startDate</code> is the same day as <code>endDate</code>, including midnight
+   * Checks whether or not the {@code startDate} is the same day as {@code endDate}, including midnight
    * time.
    *
    * @param startDate the date to check.
    * @param endDate   the date to check against to.
-   * @return true if <code>startDate</code> is the same date as <code>endDate</code> or <code>endDate</code> is the
+   * @return true if {@code startDate} is the same date as {@code endDate} or {@code endDate} is the
    * midnight of the next day.
    */
   public static boolean isSameDayIncludingMidnight(LocalDateTime startDate, LocalDateTime endDate) {
@@ -187,10 +185,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDateTime</code> Java 8 Time backport to a <code>Date</code> instance.
+   * Convert an instance of the {@link LocalDateTime} Java 8 Time backport to a {@link Date} instance.
    *
    * @param localDateTime the date to be converted.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDateTime</code>.
+   * @return a new {@link Date} instance representing the same date as {@code localDateTime}.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -201,11 +199,11 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDateTime</code> Java 8 Time backport to a <code>Date</code> instance.
+   * Convert an instance of the {@link LocalDateTime} Java 8 Time backport to a {@link Date} instance.
    *
    * @param localDateTime the date to be converted.
    * @param zoneId        the rules to be used.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDateTime</code>.
+   * @return a new {@link Date} instance representing the same date as {@code localDateTime}.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -216,10 +214,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDate</code> Java 8 Time backport to a <code>Date</code> instance.
+   * Convert an instance of the {@link LocalDate} Java 8 Time backport to a {@link Date} instance.
    *
    * @param localDate the date to be converted.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDate</code>.
+   * @return a new {@link Date} instance representing the same date as {@code localDate}.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -230,13 +228,12 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDate</code> Java 8 Time backport to a <code>Date</code> instance,
-   * using the rules given by <code>zoneId</code>.
+   * Convert an instance of the {@link LocalDate} Java 8 Time backport to a {@link Date} instance,
+   * using the rules given by {@code zoneId}.
    *
    * @param localDate the date to be converted.
    * @param zoneId    the rules to be used.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDate</code> using the
-   * <code>zoneId</code> rules.
+   * @return a new {@link Date} instance representing the same date as {@code localDate} using the {@code zoneId} rules.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -246,10 +243,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDate</code> Java 8 Time backport to a <code>Calendar</code> instance.
+   * Convert an instance of the {@link LocalDate} Java 8 Time backport to a {@link Calendar} instance.
    *
    * @param localDate the date to be converted.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDate</code>.
+   * @return a new {@link Date} instance representing the same date as {@code localDate}.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -260,13 +257,12 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDate</code> Java 8 Time backport to a <code>Calendar</code> instance,
-   * using the rules given by <code>zoneId</code>.
+   * Convert an instance of the {@link LocalDate} Java 8 Time backport to a {@link Calendar} instance,
+   * using the rules given by {@code zoneId}.
    *
    * @param localDate the date to be converted.
    * @param zoneId    the rules to be used.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDate</code> using the
-   * <code>zoneId</code> rules.
+   * @return a new {@link Date} instance representing the same date as {@code localDate} using the {@code zoneId} rules.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -276,13 +272,13 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDateTime</code> Java 8 Time backport to a <code>Calendar</code> instance,
-   * using the rules given by <code>zoneId</code>.
+   * Convert an instance of the {@link LocalDateTime} Java 8 Time backport to a {@link Calendar} instance,
+   * using the rules given by {@code zoneId}.
    *
    * @param localDateTime the date to be converted.
    * @param zoneId        the rules to be used.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDateTime</code> using the
-   * <code>zoneId</code> rules.
+   * @return a new {@link Date} instance representing the same date as {@code localDateTime} using the
+   * {@code zoneId} rules.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -293,12 +289,12 @@ public class DateHelper {
   }
 
   /**
-   * Convert an instance of the <code>LocalDateTime</code> Java 8 Time backport to a <code>Calendar</code> instance,
-   * using the rules given by <code>zoneId</code>.
+   * Convert an instance of the {@link LocalDateTime} Java 8 Time backport to a {@link Calendar} instance,
+   * using the rules given by {@code zoneId}.
    *
    * @param localDateTime the date to be converted.
-   * @return a new <code>Date</code> instance representing the same date as <code>localDateTime</code> using the
-   * <code>zoneId</code> rules.
+   * @return a new {@link Date} instance representing the same date as {@code localDateTime} using the
+   * {@code zoneId} rules.
    * @deprecated Use it only for third party libraries.
    */
   @Deprecated
@@ -309,10 +305,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert a <code>Date</code> to an instance of Java 8 Time backport <code>LocalDate</code>.
+   * Convert a {@link Date} to an instance of Java 8 Time backport {@link LocalDate}.
    *
    * @param date the date to be converted.
-   * @return a new <code>LocalDate</code> instance representing the same date as <code>date</code>.
+   * @return a new {@link LocalDate} instance representing the same date as {@code date}.
    */
   @NonNull
   public static LocalDate dateToLocalDate(@NonNull Date date) {
@@ -320,10 +316,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert a <code>Date</code> to an instance of Java 8 Time backport <code>LocalDateTime</code>.
+   * Convert a {@link Date} to an instance of Java 8 Time backport {@link LocalDateTime}.
    *
    * @param date the date to be converted.
-   * @return a new <code>LocalDateTime</code> instance representing the same date as <code>date</code>.
+   * @return a new {@link LocalDateTime} instance representing the same date as {@code date}.
    */
   @NonNull
   public static LocalDateTime dateToLocalDateTime(@NonNull Date date) {
@@ -331,10 +327,10 @@ public class DateHelper {
   }
 
   /**
-   * Convert a <code>Date</code> to an instance of Java 8 Time backport <code>LocalTime</code>.
+   * Convert a {@link Date} to an instance of Java 8 Time backport {@link LocalTime}.
    *
    * @param date the date to be converted.
-   * @return a new <code>LocalTime</code> instance representing the same date as <code>date</code>.
+   * @return a new {@link LocalTime} instance representing the same date as {@code date}.
    */
   @NonNull
   public static LocalTime dateToLocalTime(@NonNull Date date) {
@@ -342,11 +338,11 @@ public class DateHelper {
   }
 
   /**
-   * Convert a <code>Calendar</code> to an instance of Java 8 Time backport <code>ZonedDateTime</code>.
+   * Convert a {@link Calendar} to an instance of Java 8 Time backport {@link ZonedDateTime}.
    *
    * @param calendar the date to be converted.
-   * @return a new <code>ZonedDateTime</code> instance representing the same date as <code>calendar</code>, using the
-   * system default's <code>ZoneId</code>.
+   * @return a new {@link ZonedDateTime} instance representing the same date as {@code calendar}, using the
+   * system default's {@link ZoneId}.
    */
   @NonNull
   public static ZonedDateTime calendarToZonedDateTime(@NonNull Calendar calendar) {
@@ -354,11 +350,11 @@ public class DateHelper {
   }
 
   /**
-   * Convert a <code>Date</code> to an instance of Java 8 Time backport <code>ZonedDateTime</code>.
+   * Convert a {@link Date} to an instance of Java 8 Time backport {@link ZonedDateTime}.
    *
    * @param date the date to be converted.
-   * @return a new <code>ZonedDateTime</code> instance representing the same date as <code>date</code>, using the
-   * system default's <code>ZoneId</code>.
+   * @return a new {@link ZonedDateTime} instance representing the same date as {@code date}, using the
+   * system default's {@link ZoneId}.
    */
   @NonNull
   private static ZonedDateTime dateToZonedDateTime(@NonNull Date date) {
@@ -366,26 +362,26 @@ public class DateHelper {
   }
 
   /**
-   * Retrieves a list of days (<code>LocalDate</code>s) between <code>startDate</code> and <code>endDate</code>.
+   * Retrieves a list of days ({@link LocalDate}s) between {@code startDate} and {@code endDate}.
    *
    * @param startDate the date before the list should start.
    * @param endDate   the date after the list should end.
-   * @return the list between, but not including, <code>startDate</code> and <code>endDate</code>.
+   * @return the list between, but not including, {@code startDate} and {@code endDate}.
    */
   @NonNull
   public static List<LocalDate> getListOfDaysBetweenTwoDates(LocalDate startDate, LocalDate endDate) {
     LocalDate endLocalDate = endDate.plusDays(1);
     return Stream.iterate(startDate, day -> day.plusDays(1))
         .limit(startDate.until(endLocalDate, ChronoUnit.DAYS))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
-   * Retrieves a list of days (<code>LocalDate</code>s) between <code>startDate</code> and <code>endDate</code>.
+   * Retrieves a list of days ({@link LocalDate}s) between {@code startDate} and {@code endDate}.
    *
    * @param startDate the date before the list should start.
    * @param endDate   the date after the list should end.
-   * @return the list between, but not including, <code>startDate</code> and <code>endDate</code>.
+   * @return the list between, but not including, {@code startDate} and {@code endDate}.
    */
   @NonNull
   public static List<LocalDate> getListOfDaysBetweenTwoDates(Date startDate, Date endDate) {
